--- a/src/components/TicketCard.module.css
+++ b/src/components/TicketCard.module.css
@@ -47,7 +47,7 @@
     position: absolute;
     width: 14px;
     height: 14px;
-    background: #f3f3f3;
+    background: #ffffff;
     border-radius: 50%;
     top: 65%;
     transform: translateY(-50%);
@@ -93,8 +93,8 @@
     width: 100%;
     height: 2px;
     background: repeating-linear-gradient(to right,
-            rgba(255, 255, 255, 0.8),
-            rgba(255, 255, 255, 0.8) 8px,
+            rgba(255, 255, 255),
+            rgba(255, 255, 255) 8px,
             transparent 8px,
             transparent 16px);
     margin-top: 10%;
